[package]
name = "bao-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
thiserror = "1.0"
vhost-user-frontend = { git = "https://github.com/joaopeixoto13/vhost", branch = "vhost-user-frontend" }
vmm-sys-util = "0.12.1"
libc = ">=0.2.95"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.0"
